# agent-brain

./: .gitignore  AGENTS.md  README.md  requirements.txt  setup.sh
agents/: PROJECT_CONTEXT_TEMPLATE.md  backend-engineer.md  frontend-engineer.md  principal-engineer.md  product-owner.md  project-manager.md  qa-engineer.md
brain/: codex_setup.py  compiler_config.py  compiler_setup.py  config.example.json  pyproject.toml  san_publish.py  server.py
brain/hooks/: enforce_brain_protocol.py  inject_brain_context.py  remind_brain_before_research.py  route_bash_to_san.py  route_read_to_san.py
dashboard/: server.py
dashboard/static/: decisions.html  index.html  office.js  office3d.css  office3d.html  office3d.js  san.html  savings.html  style.css
docs/: AMNESIA_FIX_DESIGN_BRIEF.md  adapters.md  architecture.md  setup-guide.md
docs/superpowers/plans/: 2026-07-11-provider-aware-san-compiler.md
docs/superpowers/specs/: 2026-07-11-provider-aware-san-compiler-design.md
san/: README.md  brain-compiler.md  compiler-contract.md
san/adapters/claude/: brain-compiler.md
san/adapters/codex/: brain-compiler.toml
san/adapters/codex/brain-compiler/: SKILL.md
tests/: test_codex_setup.py  test_compiler_adapters.py  test_compiler_config.py  test_compiler_diagnostics.py  test_compiler_setup.py  test_resume_context.py  test_san_freshness.py  test_san_publish.py  test_san_skip_dirs.py
tests/fixtures/san/: compiler_sample.inventory.json  compiler_sample.py
tests/fixtures/san/codex/: compiler_sample.py.san
